Fix z-index for beatmapset description editor
Should be below modal (used for verification)

--- a/resources/assets/less/bem/beatmapset-description-editor.less
+++ b/resources/assets/less/bem/beatmapset-description-editor.less
@@ -14,6 +14,6 @@
     width: 100%;
     height: 100vh;
     background-color: fade(#000, 70%);
-    z-index: @z-index--overlay;
+    z-index: @z-index--blackout-visible;
   }
 }
